<resources>
    <string name="app_name">Thirst Mate</string>
    <string name="splash_text">Please drink responsibly.</string>
    <string name="splash_text2">Landlubbers beware! If ye be sailing the American seas, ye best have 21 years of experience...</string>
    <string name="splash_button">I am 21+</string>
    <string name="add_ingredient_button">ADD</string>
    <string name="delete_ingredient">X</string>
    <string name="home_tab">Home</string>
    <string name="drinks_tab">Drinks</string>
    <string name="shopping_tab">Shopping</string>
    <string name="create_drink_tab">Create</string>
    <string name="action_info">Info</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_share">Share</string>
    <string name="add_ingredient_name_hint">Ingredient name</string>
    <string name="add_ingredient_quantity_hint">Ingredient quantity</string>
    <string name="add_ingredient_confirm">ADD</string>
    <string name="add_ingredient_cancel">CANCEL</string>
    <string name="clear_ingredients_button">CLEAR</string>
    <string name="create_drink">Create Your Own Drink</string>
    <string name="theme_button">SET THEME</string>
    <string-array name="theme_colors">
        <item>Original</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Pink</item>
    </string-array>
    <string name="theme_text">Theme Settings</string>
    <string name="info_paragraph">Liquor can come in a variety of sizes. The most common sizes are a shot, a fifth,
        a liter, and a handle. A shot contains 1 oz, a fifth contains 750 ml, a liter contains 1000 ml, and a handle
        contains 1750 ml. Typically, a cocktail will contain 1 - 1.5 oz of liquor. However, the smallest volume of
        alcohol sold is a nip which is 50 ml.</string>
    <string name="warning">YE BE WARNED</string>
    <string name="nip_label">Nip</string>
    <string name="nip_amount">50 ml</string>
    <string name="fifth_label">Fifth</string>
    <string name="fifth_amount">750 ml</string>
    <string name="liter_label">Liter</string>
    <string name="liter_amount">1000 ml</string>
    <string name="handle_label">Handle</string>
    <string name="handle_amount">1750 ml</string>
    <string name="info_blurp">Based on the amount of liquor in a selected drink and the desired amount of
        servings, Thirst Mate will calculate the appropriate amount of liquor you need and what size bottle you should
        buy.</string>
    <string name="info_label">Information</string>
    <string name="sizing_label">Liquor Bottle Sizes</string>
    <string name="about_us">About Thirst Mate</string>
    <string name="featured_label">Featured Drinks</string>
    <string name="shopping_label">Shopping List</string>
    <string name="drink_view_ingredient_label">Ingredient</string>
    <string name="drink_view_ingredient_amt_label">Quantity (ml)</string>
    <string-array name="liquors">
        <item>Brandy</item>
        <item>Dark Rum</item>
        <item>Gin</item>
        <item>Gold Rum</item>
        <item>Rum</item>
        <item>Scotch</item>
        <item>Tequila</item>
        <item>Vodka</item>
        <item>Whiskey</item>
        <item>White Rum</item>
    </string-array>
    <string-array name="liqueurs">
        <item>Absinthe</item>
        <item>Amaretto</item>
        <item>Aperol</item>
        <item>Baileys</item>
        <item>Banana Liqueur</item>
        <item>Benedictine D.O.M.</item>
        <item>Blackberry Liqueur</item>
        <item>Blue Curacao</item>
        <item>Campari</item>
        <item>Chambord</item>
        <item>Cherry Liqueur</item>
        <item>Cherry Heering</item>
        <item>Coffee Liqueur</item>
        <item>Cointreau</item>
        <item>Creme Yvette</item>
        <item>Creme de Cassis</item>
        <item>Cynar</item>
        <item>Dark Creme de Cacao</item>
        <item>Disaronno</item>
        <item>Drambuie</item>
        <item>Fernet</item>
        <item>Fernet Branca</item>
        <item>Frangelico</item>
        <item>Galliano</item>
        <item>Grand Marnier</item>
        <item>Green Chartreuse</item>
        <item>Green Creme de Menthe</item>
        <item>Irish Mist</item>
        <item>Kahlua</item>
        <item>Luxardo Maraschino Liqueur</item>
        <item>Malibu</item>
        <item>Maraschino Liqueur</item>
        <item>Midori</item>
        <item>Orange Curacao</item>
        <item>Peach Schnapps</item>
        <item>Picon</item>
        <item>Pierre Ferrand Dry Curacao</item>
        <item>Plymouth Sloe gin</item>
        <item>Punt e Mes</item>
        <item>Raspberry Liqueur</item>
        <item>Sloe Gin</item>
        <item>Southern Comfort</item>
        <item>St Germain</item>
        <item>Strega</item>
        <item>Suze</item>
        <item>Triple Sec</item>
        <item>White Creme de Cacao</item>
        <item>White Creme de Menthe</item>
        <item>Yellow Chartreuse</item>
    </string-array>
    <string name="clear_user_drinks">CLEAR ALL USER CREATED DRINKS</string>
    <string name="create_instructions">If your ingredient is a garnish/bitters/fruit/ice/etc, leave the quantity field blank</string>
    <string name="ahoy">Ahoy, Matey!</string>
    <string name="database_text">Database Settings</string>

</resources>