<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".InfoActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/infoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:text="@string/sizing_label" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingRight="16dp"
            android:paddingLeft="20dp"
            android:paddingBottom="16dp"
            android:text="@string/info_paragraph" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp">

            <ImageView
                android:id="@+id/nipBottle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:scaleType="fitXY"/>

            <ImageView
                android:id="@+id/fifthBottle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="bottom"
                android:scaleType="fitXY"/>

            <ImageView
                android:id="@+id/literBottle"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="bottom"
                android:scaleType="fitXY"/>

            <ImageView
                android:id="@+id/handleBottle"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="bottom"
                android:scaleType="fitXY"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/nip_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/nip_amount" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/fifth_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/fifth_amount" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/liter_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/liter_amount" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/handle_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/handle_amount" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/about_us" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="34dp"
            android:paddingLeft="34dp"
            android:paddingRight="34dp"
            android:textAlignment="center"
            android:text="@string/info_blurp" />


    </LinearLayout>

</ScrollView>
