<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/themeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/theme_text" />


    <Spinner
        android:id="@+id/themeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:entries="@array/theme_colors"/>

    <Button
        android:id="@+id/themeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        android:text="@string/theme_button"
        android:onClick="onThemeTestClick"/>

    <TextView
        android:id="@+id/databaseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="12dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/database_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        android:text="@string/clear_user_drinks"
        android:backgroundTint="@color/red_light"
        android:onClick="onClearUserDrinks"/>

</LinearLayout>